Fix for #223 dd checking of each definition name vs path

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -61,6 +61,11 @@ artifact-version: 4
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 
+# historically we have not been great at ensuring definitions don't contain
+# wrong names etc. ybd can react to this via the check-definitions parameter.
+# possible values are 'ignore', 'warn', 'exit'
+check-definitions: 'warn'
+
 # If two components both offer a version of one file in the target system
 # then the behaviour may be different depending on which version is installed
 # last. ybd can react to this via the check-overlaps parameter.
