Artifact version 5 - standardising 'path' key

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -56,7 +56,8 @@ aliases:
 # 3: (supported from 934fd7e8be2b4) only include applicable build-system
 #    (enabled from 16.17 onwards)
 # 4: (after d33e0c8a9) include definitions repo: & ref: in meta for non-chunks
-artifact-version: 4
+# 5: (after 6c464db0ce) 'path' field no longer includes '.morph'
+artifact-version: 5
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
