Only upload chunks by default

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -124,12 +124,16 @@ directories:
 # Where to look for schema if none found in definitions
 json-schema: './schema/json-schema.json'
 
-# Where to look for artifacts already built by other instances of YBD
-kbas-url: 'http://artifacts1.baserock.org:8000/'
-
 # Password for uploading artifacts to kbas. NOTE: kbas code expressly rejects
 # 'insecure' as a password so this *must* be changed to get it to work
 kbas-password: 'insecure'
+
+# by default we only upload 'chunk' artifacts to kbas - alternatively set to
+# some/all of ['chunk', 'stratum', 'system']
+kbas-upload: ['chunk']
+
+# Where to look for artifacts already built by other instances of YBD
+kbas-url: 'http://artifacts1.baserock.org:8000/'
 
 # log-timings (previously this was log-elapsed)
 # - 'elapsed' (default) show time since the start of the run
@@ -189,3 +193,4 @@ tar-url: 'http://git.baserock.org/tarballs'
 
 # Trove has an api to describe a tree for a commit
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
+
