Disable release-note by default

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -173,14 +173,14 @@ no-distcc: True
 
 # if release-note is specified, ybd will create a list of changes
 # since the `release-since` ref or the last tag in the current checkout
-release-note: './release-note.txt'
+# release-note: './release-note.txt'
 
 # release-since can be any ref in the definitions history
 # if release-since is not specified, ybd will default to use the last tag.
-release-since: HEAD~1
+# release-since: HEAD~1
 
 # release-command can be used to configure the git output for the release note
-release-command: ['git', 'log', '--pretty=oneline', '-n=2']
+# release-command: ['git', 'log', '--pretty=oneline', '-n=2']
 
 # Some modes of ybd (eg build-only, keys-only) output a result to a file
 result-file: './ybd.result'
