Check fields in morph files, and exit if something odd is found

--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -1,3 +1,23 @@
+# Valid fields in a morph file
+morph-fields: ['arch',
+               'build-depends',
+               'build-system',
+               'chunks',
+               'configuration-extensions',
+               'description',
+               'devices',
+               'kind',
+               'max-jobs',
+               'morph',
+               'name',
+               'products',
+               'strata',
+               'ref',
+               'subsystems',
+               'systems',
+               'system-integration',
+               'unpetrify-ref']
+
 # Mapping from arch to cpu defaults
 cpus:
   x86_32: 'i686'
