--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -57,7 +57,9 @@ aliases:
 #    (enabled from 16.17 onwards)
 # 4: (after d33e0c8a9) include definitions repo: & ref: in meta for non-chunks
 # 5: (after 6c464db0ce) 'path' field no longer includes '.morph'
-artifact-version: 5
+# 6: (after 50eb61f7e and 588e7c7) stratum deps are retained, and we fixed a
+#    bug where ybd had been skipping errors in the middle of code blocks,
+artifact-version: 6
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
