First-pass at HTTPS support

--- a/kbas/config/kbas.conf
+++ b/kbas/config/kbas.conf
@@ -41,6 +41,15 @@ mode: development
 # directory to serve from
 artifact-dir: '/src/artifacts'
 
+# To enable HTTPS, you need a certificate and private-key
+# FIXME: and maybe a certificate-chain: ???
+# note if these values don't point to a valid file, kbas defaults to http
+certificate: ./server.pem
+private-key: ./server.pem
+
+# to populate the above, generate a cert and key in the working dir, eg:
+# `openssl req -new -x509 -keyout server.pem -out server.pem -days 365 -nodes`
+
 # ip address or hostmame of machine to serve on. 0.0.0.0 should work for most
 # cases... '0.0.0.0 means all IPv4 addresses on the local machine'
 host: 0.0.0.0
