Check every field in every definition

--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -1,19 +1,26 @@
 # Valid fields in a morph file
 morph-fields: ['arch',
+               'artifacts',
                'build-depends',
+               'build-mode',
                'build-system',
                'chunks',
                'configuration-extensions',
+               'contents',
                'description',
                'devices',
                'kind',
                'max-jobs',
                'morph',
                'name',
+               'path',
+               'prefix',
                'products',
                'strata',
                'ref',
+               'repo',
                'subsystems',
+               'submodules',
                'systems',
                'system-integration',
                'unpetrify-ref']
