--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,11 @@ check_cache_keys:
   - ../ybd/ybd.py ci x86_64
   - echo ci.b9de86669ce182e60e3f9445e6394b478b67a2c73b4c0764491c158c5f2569e9 > expected.result
   - diff expected.result ybd.result
+
+check_build:
+  stage: build
+  variables:
+    YBD_check_definitions: "exit"
+  script:
+  - git clone git://git.baserock.org/baserock/baserock/definitions
+  - ./ybd.py definitions/systems/minimal-system-x86_64-generic.morph x86_64
