--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = ybd
 summary = ybd is a tool for integrating software stacks
 description-file:
     readme.md
-url = https://github.com/devcurmudgeon/ybd
+url = https://gitlab.com/baserock/ybd
 license = GPL2
 
 [files]
