--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = ybd
 summary = ybd is a tool for integrating software stacks
 description-file:
-    readme.md
+    README.md
 url = https://gitlab.com/baserock/ybd
 license = GPL2
 
