--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -204,6 +204,11 @@ serve-artifacts: True
 # Trove can deliver tarballs of gits, which are faster downloads to start with
 tar-url: 'http://git.baserock.org/tarballs'
 
+# Normally the host will have /tmp as a writeable tmp directory, and this is
+# needed by ybd during sandboxing. If your host needs the tmp to be somewhere
+# else, set TMPDIR
+# TMPDIR: /tmp
+
 # Trove has an api to describe a tree for a commit
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 
