Add check for cache_keys_v6 to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ check_pep8:
   stage: pep8
   script: "pep8"
 
-check_cache_keys:
+cache_keys_v1:
   stage: cache_keys
   variables:
     YBD_artifact_version: "1"
@@ -30,6 +30,20 @@ check_cache_keys:
   - git checkout baserock-14.40
   - ../ybd/ybd.py ci x86_64
   - echo ci.b9de86669ce182e60e3f9445e6394b478b67a2c73b4c0764491c158c5f2569e9 > expected.result
+  - diff expected.result ybd.result
+
+cache_keys_v6:
+  stage: cache_keys
+  variables:
+    YBD_artifact_version: "6"
+    YBD_mode: "keys-only"
+  script:
+  - cd ..
+  - git clone git://git.baserock.org/baserock/baserock/definitions
+  - cd definitions
+  - git checkout GENIVI-M1.0
+  - ../ybd/ybd.py ci x86_64
+  - echo ci.d9dec300a7cb2bc273dc6846e69a11b7f3ad304462f3a4c6ce8c5ab6ead11647 > expected.result
   - diff expected.result ybd.result
 
 check_build:
