--- a/requirements.freeze.txt
+++ b/requirements.freeze.txt
@@ -1,7 +1,7 @@
 PyYAML==3.12
 requests==2.11.1
 sandboxlib==0.3.1
-pep8==1.7.0
+pycodestyle==2.2.0
 jsonschema==2.5.1
 bottle==0.12.1
 cherrypy==8.1.2
