s/release-command/release-cmd/ and don't crash out if it's absent
Previously if release-note: was specified, but release-command
was not, then ybd would error. Renamed to release-cmd for pep8

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -183,8 +183,8 @@ no-distcc: True
 # if release-since is not specified, ybd will default to use the last tag.
 # release-since: HEAD~1
 
-# release-command can be used to configure the git output for the release note
-# release-command: ['git', 'log', '--pretty=oneline', '-n=2']
+# release-cmd can be used to configure the git output for the release note
+# release-cmd: ['git', 'log', '--pretty=oneline', '-n=2']
 
 # Some modes of ybd (eg build-only, keys-only) output a result to a file
 result-file: './ybd.result'
