Fix #249 Update to artifact-version: 7, max-jobs is now in cache-key

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -59,7 +59,9 @@ aliases:
 # 5: (after 6c464db0ce) 'path' field no longer includes '.morph'
 # 6: (after 50eb61f7e and 588e7c7) stratum deps are retained, and we fixed a
 #    bug where ybd had been skipping errors in the middle of code blocks,
-artifact-version: 6
+# 7: (after e7be39bf) see https://gitlab.com/baserock/ybd/issues/249
+#    we need to include max-jobs in the cache-key
+artifact-version: 7
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
