Add track-branches: conf option, to use unpetrify-ref
Also, if we set branches in the ref: fields now, these get
resolved to sha: in output $definitions.yml file

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -211,6 +211,11 @@ tar-url: 'http://git.baserock.org/tarballs'
 # else, set TMPDIR
 # TMPDIR: /tmp
 
+# Normally ybd builds at whatever version is set in the 'ref:' field
+# If we set 'track-branches:', then ybd will attempt to build 'unpetrify-ref:'
+# track-branches: [path/to/foo-chunk, path/to/bar-chunk, path/to/bip-chunk]
+# track-branches: True
+
 # Trove has an api to describe a tree for a commit
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 
