If definition contains sha:,  it always overrides ref:

--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -19,6 +19,7 @@ morph-fields: ['arch',
                'strata',
                'ref',
                'repo',
+               'sha',
                'subsystems',
                'submodules',
                'systems',
