Store the original 'ref' and restore it before saving
In case it was overridden by the 'sha' field for the purpose of
building, we still want to export the original 'ref' field in
the saved target.yml

--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -13,6 +13,7 @@ morph-fields: ['arch',
                'max-jobs',
                'morph',
                'name',
+               'orig_ref',
                'path',
                'prefix',
                'products',
