--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -61,7 +61,8 @@ aliases:
 #    bug where ybd had been skipping errors in the middle of code blocks,
 # 7: (after e7be39bf) see https://gitlab.com/baserock/ybd/issues/249
 #    we need to include max-jobs in the cache-key
-artifact-version: 7
+# 8: (after c59d65cf) support added for git-lfs
+artifact-version: 8
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
