--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ check_build_debian_jessie:
   image: debian:jessie
   stage: build
   variables:
+    YBD_kbas_url: "false-url"
     YBD_check_definitions: "exit"
   script:
   - ./ybd.py definitions/systems/minimal-system-x86_64-generic.morph x86_64
@@ -55,6 +56,7 @@ check_build_ubuntu_16.04:
   image: ubuntu:16.04
   stage: build
   variables:
+    YBD_kbas_url: "false-url"
     YBD_check_definitions: "exit"
   script:
   - ./ybd.py definitions/systems/minimal-system-x86_64-generic.morph x86_64
@@ -63,18 +65,17 @@ check_build_centos_7:
   image: centos:7
   stage: build
   variables:
+    YBD_kbas_url: "false-url"
     YBD_check_definitions: "exit"
   script:
   - ./ybd.py definitions/systems/minimal-system-x86_64-chroot.morph x86_64
 
-
-check_build_no_kbas:
+check_build_kbas:
   stage: build
   variables:
     YBD_check_definitions: "exit"
-    YBD_kbas_url: "false-url"
   script:
-  - ./ybd.py definitions/strata/build-essential.morph x86_64
+  - ./ybd.py definitions/systems/minimal-system-x86_64-chroot.morph x86_64
 
 check_deploy:
   stage: deploy
